# kinect-to-x11

./: Cargo.toml  README.md
freenect2/: Cargo.toml
freenect2-sys/: Cargo.toml  build.rs
freenect2-sys/src/: lib.rs  wrapper.cpp  wrapper.hpp
freenect2/src/: context.rs  frame.rs  lib.rs  logger.rs
freenect2/src/device/: color_camera_params.rs  depth_config.rs  ir_camera_params.rs  mod.rs
kinect-to-x11/: Cargo.toml
kinect-to-x11/src/: main.rs  transformer.rs
